<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autominder</string>
    <string name="title_section1">Historial</string>
    <string name="title_section2">Info</string>
    <string name="title_section3">Recordatorios</string>
    <string name="action_settings">Settings</string>
    <string name="service_description">notification service for when a car needs maintenance</string>
    <string name="you_have">¡Tienes</string>
    <string name="reminders_due">mantenimiento(s) pendiente(s)!</string>
    <string name="maintenance_reminder_sub">Toca para ver</string>
    <string name="add_vehicle">Agregar vehículo</string>
    <string name="basic_data">Datos Básicos</string>
    <string name="name">nombre</string>
    <string name="current_km">kilometraje actual</string>
    <string name="weekly_km">km</string>
    <string name="reminders">Recordatorios</string>
    <string name="we_recomend_these_reminders">Te recomendamos estos recordatorios, luego podrás editarlos y agregar más</string>
    <string name="you_must_provide">Debes proveer la ultima vez que hiciste esos mantenimientos</string>
    <string name="empty_vehicle_list">No vehicles found.</string>
    <string name="km_actual">Kilometraje Actual</string>
    <string name="km_semanales">Kilómetros semanales (aprox.)</string>
    <string name="update">Actualizar</string>
    <string name="maint_type">Criterio de recordatorio</string>
    <string name="por_km">Por KM</string>
    <string name="por_tiempo">Por Tiempo</string>
    <string name="add_maintenance">Agregar Recordatorio</string>
    <string name="km_last_time">Hace cuánto se realizó</string>
    <string name="pending_maint">Mantenimientos Pendientes</string>
    <string name="login_option">Login</string>
    <string name="disable_gps_tracking">Descativar Modo Vehículo</string>
    
    <string-array name="time_choices">
        <item>días</item>
        <item>meses</item>
        <item>años</item>
    </string-array>
</resources>   