<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/txtKmActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_actual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtKmActualVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtKmSemanales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_semanales"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editKmSemanales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/butUpdateWeeklyKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />

</LinearLayout>