<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/basic_data"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nombre_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/km_actual_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/current_km"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trayecto"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <WebView
                android:id="@+id/webView1"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" 
                    android:gravity="center">

                    <EditText
                        android:id="@+id/veces_por_semana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="2"
                        android:inputType="number" 
                        android:gravity="center">
                    </EditText>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="veces/semana"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center" >

                    <EditText
                        android:id="@+id/km_semanales_vehiculo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="5"
                        android:gravity="center"
                        android:inputType="number"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=" km semanales"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/reminders"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_recomend_these_reminders"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckbox1Clicked" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/default_maintenance1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mantenimiento 1"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/text1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="realizado por\nultima vez hace"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/km1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="3"
                                android:inputType="number" />

                            <TextView
                                android:id="@+id/TextView01"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="km"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckbox2Clicked" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/default_maintenance2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mantenimiento 2"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/text2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="realizado por\nultima vez hace"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/km2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="3"
                                android:inputType="number" />

                            <TextView
                                android:id="@+id/TextView02"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="km"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onCheckbox3Clicked" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/default_maintenance3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mantenimiento 3"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/TextView06"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="realizado por\nultima vez hace"
                                android:textSize="12sp" />

                            <EditText
                                android:id="@+id/km3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="3"
                                android:inputType="number" />

                            <TextView
                                android:id="@+id/TextView05"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="km"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_must_provide"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/addVehicleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="tryAddVehicle"
                android:text="Agregar vehículo" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>